- dabūt tokenu + reģistrē jaunu lietotāju strādā +jacoco ar intelij